fix dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,26 +19,3 @@ html {
   height: -webkit-fill-available;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
-
-img:not(.allow-hover) {
-  pointer-events: none;
-}
-
-.loader {
-  background-image: url('/loader.svg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 30%;
-}
